--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>6.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
